--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-test
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <title>Test</title>
+</head>
+<body>
+  <div class="btn btn-info">test</div>
+</body>
+</html>
